<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="sMainHeading">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="sButton1">Spotify Streamer</string>
    <string name="sButton2">Football Scores App</string>
    <string name="sButton3">Library App</string>
    <string name="sButton4">Build It Bigger</string>
    <string name="sButton5">XYZ Reader</string>
    <string name="sButton6">Capstone</string>





</resources>
