<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB">




    <TextView android:text="@string/sMainHeading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="25dp"
        android:textIsSelectable="true" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"

        android:orientation="vertical"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
       >





    <Button

        android:layout_height="wrap_content"
        android:text="@string/sButton1"

        android:layout_width="match_parent"
        android:id="@+id/button1"
        style="@style/ButtonStyle1"/>
        <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sButton2"
        android:id="@+id/button2"
        style="@style/ButtonStyle1"/>
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sButton3"
        android:id="@+id/button3"
        style="@style/ButtonStyle1"/>
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sButton4"
        android:id="@+id/button4"

        style="@style/ButtonStyle1"/>
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sButton5"
        android:id="@+id/button5"
        style="@style/ButtonStyle1"/>
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sButton6"
        android:id="@+id/button6"
        style="@style/ButtonStyle2"/>

</LinearLayout>
    </LinearLayout>

